--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         </style>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css" rel="stylesheet" />
     </head>
     <body style="background-color: var(--color-background)">
         <noscript>
